# DeadDrop

./: .Dockerfile.swp  .dockerignore  .gitignore  .gitmodules  DINcalculations.md  Dockerfile  Makefile  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
archive/: controller.rs
archive/server/: LICENSE  README.md  app.js  app.test.js  connection.ts  env:Zone.Identifier  knexfile.js  package-lock.json  package.json  webpack.config.js
archive/server/controllers/: dbConnection.js  index.js
archive/server/src/: index.js
archive/server_v1/: Dockerfile  app.js  package.json
archive/server_v2/: .gitignore  README.md  adapter.ts  app.ts  controller.ts  factory.ts  index.ts  interfaces.ts  package-lock.json  package.json  service.ts
client/: .package.json.swp  Dockerfile  README.md  babel.config.js  package-lock.json  package.json  webpack.config.js
client/public/: index.html
client/src/: App.js  App.test.js  dialogue.json
server/: .eslintrc.cjs  .gitignore  .swp  Cargo.toml  LICENSE  README.md  Rocket.toml  adapter.ts  app.ts  connection.ts  controller.ts  controllers.ts  factory.ts  global.d.ts  index.ts  interfaces.ts  knexfile.js  package-lock.json  package.json  service.ts  tsconfig.json  webpack.prod.ts
server/migrations/: 20220311163252_create_deaddrop_table.js
server/migrations/2023-06-04-223556_dead_drops/: down.sql  up.sql
server/src/: cont.rs  controller.rs  factory.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs  structures.rs  tests.rs
terraform/: main.tf
terraform/script/: az-login.sh  az-logout.sh
(+15 files in other folders)
